--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -10,7 +10,7 @@
 body {
 	margin: 0px;
 	background-color: white;
-	TEXT-ALIGN: center;
+	text-align: center;
 }
 
 a:active {
@@ -25,8 +25,8 @@ a:visted {
 
 #sortable {
 	list-style-type: none;
-	MARGIN-RIGHT: auto;
-	MARGIN-LEFT: auto;
+	margin-right: auto;
+	margin-left: auto;
 	padding-left: 50px;
 	width: 60%;
 	height: auto;
@@ -62,7 +62,8 @@ a:visted {
 	margin: 5px 5px 0px 0px;
 	color: #999;
 	font-size: 16px;
-	height: 52px; float : right;
+	height: 52px; 
+	float : right;
 	text-decoration: none;
 	float: right;
 }
@@ -75,6 +76,18 @@ a:visted {
 	margin-top: 10px;
 	opacity: 0;
 }
+
+#about{
+position:absolute;
+clear: both;
+color: #999;
+font-size: 16px;
+text-align: left;
+right:20px;
+top:20px;
+display:none;
+}
+
 </style>
 <script>
 	$(function() {
@@ -108,7 +121,7 @@ a:visted {
 <body>
 	<div>
 		<div id="head">
-			<a href="#">帮助</a>
+			<a href="#" onclick="$('#about').show('fast');">帮助</a>
 		</div>
 		<div id="logo">Simple</div>
 		<div id="searchContainer">
@@ -160,6 +173,23 @@ a:visted {
 					style="background: url(img/cnblogs.png) no-repeat">博客园</a></li>
 			</ul>
 		</div>
+	</div>
+	<div id="about">
+	<ol>
+	<li>
+	按空格键，可将焦点置于搜索框
+	</li>
+	<li>
+	默认搜索为百度，搜索框内关键词前空一格则使用google搜索
+	</li>
+	<li>
+	链接可拖动调换位置
+	</li>
+	<li>
+	版权归<a href="http://www.cnblogs.com/luguo3000/">屌丝逆袭</a>所有
+	</li>
+	</ol>
+	<a style="float:right;text-decoration: none;" href="#" onclick="$('#about').hide('fast');">关闭</a>
 	</div>
 </body>
 </html>
