--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -132,7 +132,7 @@ a:visted {
 
 	//load logo
 	$(document).ready(function() {
-		var colorArray=["blue","orange","green","yellow","indigo","red","violet"]; 
+		var colorArray=["#45b97c","green","violet","#faa755","#6950a1","#694d9f","#ef5b9c"]; 
 		$("#logo").css("color",colorArray[new Date().getDay()]);
 		$("#logo").fadeTo(1000, 1, function() {
 			setTimeout(function() {
