change font-family font-color

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -11,6 +11,7 @@ body {
 	margin: 0px;
 	background-color: white;
 	text-align: center;
+	font-family: Arial,Verdana,Geneva,sans-serif;
 }
 
 a:active {
@@ -45,7 +46,7 @@ a:visted {
 #sortable li a {
 	padding-left: 22px;
 	text-decoration: none;
-	color: green;
+	color: #009c04;
 }
 
 #head a {
