add baidu suggestion

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -164,7 +164,7 @@ a:visted {
 		</div>
 		<div id="logo">Simple</div>
 		<div id="searchContainer">
-			<input id="search" type="text" />
+			<input id="search" type="text" name="word" baiduSug= "2"/>
 		</div>
 		<div style="margin-top: 50px">
 			<ul id="sortable">
@@ -229,4 +229,5 @@ a:visted {
 			onclick="$('#about').hide('fast');">关闭</a>
 	</div>
 </body>
+<script charset="gbk" src="js/opensug.js"></script>
 </html>
