add background position

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -165,47 +165,47 @@ a:visted {
 		<div style="margin-top: 50px">
 			<ul id="sortable">
 				<li><a href="http://www.baidu.com" target="_blank"
-					style="background: url(img/baidu.png) no-repeat">百 度</a></li>
+					style="background: url(img/baidu.png) no-repeat 0px 2px">百 度</a></li>
 				<li><a href="http://www.google.com" target="_blank"
-					style="background: url(img/google.png) no-repeat">谷 歌</a></li>
+					style="background: url(img/google.png) no-repeat 0px 2px">谷 歌</a></li>
 				<li><a href="http://www.qq.com" target="_blank"
-					style="background: url(img/qq.png) no-repeat">腾 讯</a></li>
+					style="background: url(img/qq.png) no-repeat 0px 2px">腾 讯</a></li>
 				<li><a href="http://www.sina.com" target="_blank"
-					style="background: url(img/sina.png) no-repeat">新 浪</a></li>
+					style="background: url(img/sina.png) no-repeat 0px 2px">新 浪</a></li>
 				<li><a href="http://www.163.com" target="_blank"
-					style="background: url(img/163.png) no-repeat">网 易</a></li>
+					style="background: url(img/163.png) no-repeat 0px 2px">网 易</a></li>
 				<li><a href="http://www.dianping.com" target="_blank"
-					style="background: url(img/dianping.png) no-repeat">大众点评</a></li>
+					style="background: url(img/dianping.png) no-repeat 0px 2px">大众点评</a></li>
 				<li><a href="http://www.jd.com" target="_blank"
-					style="background: url(img/jd.png) no-repeat">京 东</a></li>
+					style="background: url(img/jd.png) no-repeat 0px 2px">京 东</a></li>
 				<li><a href="http://www.yixun.com" target="_blank"
-					style="background: url(img/yixun.png) no-repeat">易 讯</a></li>
+					style="background: url(img/yixun.png) no-repeat 0px 2px">易 讯</a></li>
 				<li><a href="http://www.tmall.com" target="_blank"
-					style="background: url(img/tmall.png) no-repeat">天 猫</a></li>
+					style="background: url(img/tmall.png) no-repeat 0px 2px">天 猫</a></li>
 				<li><a href="http://www.taobao.com" target="_blank"
-					style="background: url(img/taobao.png) no-repeat">淘 宝</a></li>
+					style="background: url(img/taobao.png) no-repeat 0px 2px">淘 宝</a></li>
 				<li><a href="http://www.meituan.com" target="_blank"
-					style="background: url(img/meituan.png) no-repeat">美 团</a></li>
+					style="background: url(img/meituan.png) no-repeat 0px 2px">美 团</a></li>
 				<li><a href="http://auth.alipay.com" target="_blank"
-					style="background: url(img/zhifubao.png) no-repeat">支付宝</a></li>
+					style="background: url(img/zhifubao.png) no-repeat 0px 2px">支付宝</a></li>
 				<li><a href="http://www.youku.com" target="_blank"
-					style="background: url(img/youku.png) no-repeat">优 酷</a></li>
+					style="background: url(img/youku.png) no-repeat 0px 2px">优 酷</a></li>
 				<li><a href="http://www.iqiyi.com/" target="_blank"
-					style="background: url(img/iqiyi.png) no-repeat">爱奇艺</a></li>
+					style="background: url(img/iqiyi.png) no-repeat 0px 2px">爱奇艺</a></li>
 				<li><a href="http://www.12306.cn" target="_blank"
-					style="background: url(img/12306.png) no-repeat">12306</a></li>
+					style="background: url(img/12306.png) no-repeat 0px 2px">12306</a></li>
 				<li><a href="http://www.qunar.com" target="_blank"
-					style="background: url(img/qunar.png) no-repeat">去哪儿</a></li>
+					style="background: url(img/qunar.png) no-repeat 0px 2px">去哪儿</a></li>
 				<li><a href="http://www.renren.com" target="_blank"
-					style="background: url(img/renren.png) no-repeat">人人网</a></li>
+					style="background: url(img/renren.png) no-repeat 0px 2px">人人网</a></li>
 				<li><a href="http://www.weibo.com" target="_blank"
-					style="background: url(img/weibo.png) no-repeat">新浪微博</a></li>
+					style="background: url(img/weibo.png) no-repeat 0px 2px">新浪微博</a></li>
 				<li><a href="http://www.58.com" target="_blank"
-					style="background: url(img/58.png) no-repeat">58同城</a></li>
+					style="background: url(img/58.png) no-repeat 0px 2px">58同城</a></li>
 				<li><a href="http://www.anjuke.com" target="_blank"
-					style="background: url(img/anjuke.png) no-repeat">安居客</a></li>
+					style="background: url(img/anjuke.png) no-repeat 0px 2px">安居客</a></li>
 				<li><a href="http://www.cnblogs.com" target="_blank"
-					style="background: url(img/cnblogs.png) no-repeat">博客园</a></li>
+					style="background: url(img/cnblogs.png) no-repeat 0px 2px">博客园</a></li>
 			</ul>
 		</div>
 		<div id="footer">
