add keywords description douban zhihu

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Simple</title>
+<meta name="keywords" content="上网导航,网址大全,网址导航,simple上网导航,简单导航,simple网址大全,清晰网址导航,常用网站,hao123导航,360导航,搜狗导航">
+<meta name="description" content="Simple--简洁清晰的网址导航，为用户提供常用网址、自定义网址，提供最简单便捷的上网导航服务。">
+<title>Simple 简洁的网址导航</title>
 <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <script src="js/jquery-1.10.2.js"></script>
 <script src="js/jquery-ui.js"></script>
@@ -186,8 +188,12 @@ a:visted {
 					style="background: url(img/taobao.png) no-repeat 0px 2px">淘 宝</a></li>
 				<li><a href="http://www.meituan.com" target="_blank"
 					style="background: url(img/meituan.png) no-repeat 0px 2px">美 团</a></li>
-				<li><a href="http://auth.alipay.com" target="_blank"
+				<li><a href="http://www.alipay.com" target="_blank"
 					style="background: url(img/zhifubao.png) no-repeat 0px 2px">支付宝</a></li>
+					<li><a href="http://www.douban.com" target="_blank"
+					style="background: url(img/douban.png) no-repeat 0px 2px">豆 瓣</a></li>
+				<li><a href="http://www.zhihu.com" target="_blank"
+					style="background: url(img/zhihu.png) no-repeat 0px 2px">知 乎</a></li>
 				<li><a href="http://www.youku.com" target="_blank"
 					style="background: url(img/youku.png) no-repeat 0px 2px">优 酷</a></li>
 				<li><a href="http://www.iqiyi.com/" target="_blank"
