--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="keywords" content="上网导航,网址大全,网址导航,simple上网导航,简单导航,simple网址大全,清晰网址导航,常用网站,hao123导航,360导航,搜狗导航">
 <meta name="description" content="Simple--简洁清晰的网址导航，为用户提供常用网址、自定义网址，提供最简单便捷的上网导航服务。">
-<title>Simple 简洁的网址导航</title>
+<title>Simple 最简洁的上网导航</title>
 <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <script src="js/jquery-1.10.2.js"></script>
 <script src="js/jquery-ui.js"></script>
