add sae js link

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -9,8 +9,8 @@
 <title>Simple 最简洁的上网导航</title>
 <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="css/main.css"/>
-<script src="js/jquery-1.10.2.js"></script>
-<script src="js/jquery-ui.js"></script>
+<script src="http://lib.sinaapp.com/js/jquery/1.10.2/jquery-1.10.2.min.js"></script>
+<script src="http://lib.sinaapp.com/js/jquery-ui/1.10.2/jquery-ui.min.js"></script>
 <script src="js/jquery.cookie.js"></script>
 <script>
 	$(function() {
