--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -154,13 +154,13 @@
 				<li no="19"><a href="http://www.renren.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -576px">人人网</a></li>
 				<li no="20"><a href="http://www.weibo.com" target="_blank"
-					style="background: url(img/defaultIcon.png) no-repeat 0px -608px">新浪微博</a></li>
+					style="background: url(img/defaultIcon.png) no-repeat 0px -608px">微博</a></li>
 				<li no="21"><a href="http://www.58.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -640px">58同城</a></li>
 				<li no="22"><a href="http://www.anjuke.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -672px">安居客</a></li>
 				<li no="23"><a href="http://www.soufang.com" target="_blank"
-					style="background: url(img/defaultIcon.png) no-repeat 0px -704px">搜房</a></li>
+					style="background: url(img/defaultIcon.png) no-repeat 0px -704px">搜 房</a></li>
 			</ul>
 		</div>
 		<div id="footer">
