--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -130,7 +130,7 @@
 				<li no="7"><a href="http://www.jd.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -192px">京 东</a></li>
 				<li no="8"><a href="http://www.yixun.com" target="_blank"
-					style="background: url(img/defaultIcon.png) no-repeat 0px -224px">易 讯</a></li>
+					style="background: url(img/defaultIcon.png) no-repeat 0px -224px">1号店</a></li>
 				<li no="9"><a href="http://www.tmall.com" target="_blank"
 					style="background: url(img/defaultIcon.png) no-repeat 0px -256px">天 猫</a></li>
 				<li no="10"><a href="http://www.taobao.com" target="_blank"
