--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -80,7 +80,7 @@
 		$("#sortable li").each(function(){
 			order.push($(this).attr("no"));
 		});
-		$.cookie('order',JSON.stringify(order));
+		$.cookie('order',JSON.stringify(order),{expires:1000});
 	}
 	
 	function loadLogo() {
