change baidu sug

--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -181,5 +181,5 @@
 			onclick="$('#about').hide('fast');">关闭</a>
 	</div>
 </body>
-<script charset="gbk" src="js/opensug.js"></script>
+<script charset="gbk" src="http://www.baidu.com/js/opensug.js"></script>
 </html>
